include/sql_state.h
@@ -194,3 +194,4 @@ ER_SP_DUP_VAR,			"42000", "",
 ER_SP_DUP_COND,			"42000", "",
 ER_SP_DUP_CURS,			"42000", "",
 /*ER_SP_CANT_ALTER*/
+ER_SP_SUBSELECT_NYI,            "0A000", "",
