sql/sql_yacc.yy
@@ -1548,10 +1548,15 @@ sp_proc_stmt:
 	    }
 	    else
 	    {
-	      sp_instr_freturn *i=
-	        new sp_instr_freturn(lex->sphead->instructions(),
-		                     $2, lex->sphead->m_returns);
+	      sp_instr_freturn *i;
 
+	      if ($2->type() == Item::SUBSELECT_ITEM)
+	      {  /* QQ For now, just disallow subselects as values */
+	        send_error(lex->thd, ER_SP_BADSTATEMENT);
+	        YYABORT;
+	      }
+	      i= new sp_instr_freturn(lex->sphead->instructions(),
+		                      $2, lex->sphead->m_returns);
 	      lex->sphead->add_instr(i);
 	      lex->sphead->m_has_return= TRUE;
 	    }
@@ -5933,6 +5938,11 @@ option_value:
 	    }
             else
 	    { /* An SP local variable */
+	      if ($3 && $3->type() == Item::SUBSELECT_ITEM)
+	      {  /* QQ For now, just disallow subselects as values */
+	        send_error(lex->thd, ER_SP_SUBSELECT_NYI);
+	        YYABORT;
+	      }
 	      sp_pvar_t *spv= lex->spcont->find_pvar(&$1.base_name);
               sp_instr_set *i= new sp_instr_set(lex->sphead->instructions(),
 	                                        spv->offset, $3, spv->type);
